syntax = "proto3";

option go_package = "github.com/juxue97/common/api";

package api;

message Order {
    string ID =1;
    string customerID =2;
    string Status =3;
    repeated Item Items=4;
    string PaymentLink =5;
}

message Product{
    string ID =1;
    string Name =2;
    string TaxCode =3;
    string Description=4;
    bool Active=5;
    double Price =6;
    int64 Quantity=7;
    string Currency=8;
    map<string, string> Metadata =9;
}

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
    rpc GetOrderForStockUpdate(GetOrderRequest) returns (Order);
}

service StockService{
    rpc CheckIfItemsInStock(CheckIfItemsInStockRequest) returns (CheckIfItemsInStockResponse);
    rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CheckIfItemsInStockRequest{
    repeated ItemsWithQuantity Items =1;
}

message CheckIfItemsInStockResponse{
    bool InStock =1;
    repeated Item Items =2;
}

message GetItemsRequest{
    repeated string ItemIDs=1;
}

message GetItemsResponse{
    repeated Item Items=1;
}

message GetOrderRequest{
    string OrderID = 1;
    string CustomerID =2;
}

message Item {
    string ID =1;
    string Name =2;
    int32 Quantity =3;
    string PriceID =4;
}

message ItemsWithQuantity{
    string ID =1;
    int32 Quantity =2;
}

message CreateOrderRequest{
    string customerID = 1;
    repeated ItemsWithQuantity Items =2 ;
}
